# nkhive

./: CMakeLists.txt  LICENSE.txt  README.txt
cmake/: FindCppUnit.cmake  FindIlmBase.cmake  Findhdf5.cmake  Findnkbase.cmake  common.cmake
src/: CMakeLists.txt
src/nkhive/: CMakeLists.txt  Defs.h  Types.h
src/nkhive/attributes/: Attribute.cpp  Attribute.h  AttributeCollection.cpp  AttributeCollection.h  AttributeCollection.hpp  PrimitiveTypes.cpp  PrimitiveTypes.h  StringAttribute.h  StringAttribute.hpp  TypedAttribute.hpp
src/nkhive/bitfields/: BitField3D.h  BitField3D.hpp  BitOps.cpp  BitOps.h  BitOps.hpp
src/nkhive/interpolation/: CubicInterpolation.h  CubicInterpolation.hpp  LinearInterpolation.h  LinearInterpolation.hpp  LinearSamplingUtil.h  LinearSamplingUtil.hpp  LinearSplat.h  LinearSplat.hpp  NearestNeighborSplat.h  NearestNeighborSplat.hpp
src/nkhive/io/: VoidFile.cpp  VoidFile.h  VolumeFile.h  VolumeFile.hpp
src/nkhive/io/hdf5/: HDF5Attribute.cpp  HDF5Attribute.h  HDF5Base.cpp  HDF5Base.h  HDF5DataSet.cpp  HDF5DataSet.h  HDF5DataSpace.cpp  HDF5DataSpace.h  HDF5DataType.cpp  HDF5DataType.h  HDF5Group.cpp  HDF5Group.h  HDF5Property.cpp  HDF5Property.h  HDF5Util.cpp  HDF5Util.h
src/nkhive/tiling/: Stamp.h  Stamp.hpp
src/nkhive/util/: BoundingBox.h  BoundingBox.hpp  Bounds3D.h  Bounds3D.hpp
src/nkhive/volume/: AbstractIterator.h  AbstractIterator.hpp  Cell.h  Cell.hpp  CellSetIterator.h  CellSetIterator.hpp  FilledBoundsIterator.h  FilledBoundsIterator.hpp  Node.h  Node.hpp  NodeSetIterator.h  NodeSetIterator.hpp  SetIterator.h  SetIterator.hpp  Tree.h  Tree.hpp  Volume.h  Volume.hpp
src/nkhive/xforms/: LocalXform.cpp  LocalXform.h
unittest/: CMakeLists.txt  TestAbstractIterators.cpp  TestAttributeCollection.cpp  TestAttributeRegistry.cpp  TestBitOps.cpp  TestBitfield3D.cpp  TestBoundingBox.cpp  TestBounds3D.cpp  TestCell.cpp  TestImath.cpp  TestInterpolation.cpp  TestLinearSplat.cpp  TestLocalXform.cpp  TestNearestNeighborSplat.cpp  TestNode.cpp  TestNodeSetIterator.cpp  TestPrimitiveAttributes.cpp  TestSetIterator.cpp  TestStringAttribute.cpp  TestTree.cpp  TestVolume.cpp  TestVolumeFile.cpp  main.cpp
